Fixed image size when small image added on mobiles

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -85,6 +85,7 @@ html {
         top: 0;
         bottom: 0;
         margin: 0 auto;
+        width: 100%;
         max-width: 100%;
         transition: 0.3s ease-out;
         box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 1);
